--- a/app.json
+++ b/app.json
@@ -9,13 +9,15 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.anonymous.restateapp"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.restateapp"
     },
     "web": {
       "bundler": "metro",
@@ -37,7 +39,7 @@
         "expo-font",
         {
           "fonts": [
-           "./assets/fonts/Rubik-Regular.ttf",
+            "./assets/fonts/Rubik-Regular.ttf",
             "./assets/fonts/Rubik-Medium.ttf",
             "./assets/fonts/Rubik-Bold.ttf",
             "./assets/fonts/Rubik-Light.ttf",
